newclay/test/Compiler/Propagation/Fail/MakeExternalCodePointerMissingArguments2/main.clay
import __primitives__.*;

foo() { }

main() {
    return makeExternalCodePointer(foo);
}
